--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   "author": "Chris Pelletier",
   "license": "MIT",
   "dependencies": {
+    "webpack": "^3.6.0",
     "yarn": "^1.0.2"
+  },
+  "devDependencies": {
+    "babel-loader": "^7.1.2",
+    "css-loader": "^0.28.7",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2"
   }
 }
