--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "4.0.0-alpha.6",
     "css-loader": "^0.28.7",
@@ -25,9 +26,12 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-thunk": "^1.0.0",
     "reactstrap": "^4.8.0",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "universal-cookie": "^2.1.0",
