--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "flask-react-mongodb",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack -p --progress --config webpack.config.js",
-    "dev-build": "webpack --progress -d --config webpack.config.js",
+    "build": "webpack -p --config webpack.config.js",
+    "dev-build": "webpack -d --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --progress -d --config webpack.config.js --watch"
   },
