--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "webpack -p --progress --config webpack.config.js",
     "dev-build": "webpack --progress -d --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --progress -d --config webpack.config.js --watch"
+    "watch": "webpack --progress -d --config webpack.config.js --watch",
+    "heroku-postbuild": "yarn dev-build"
   },
   "author": "Chris Pelletier",
   "license": "MIT",
